force-app/main/default/objects/PlanAssignment__c/PlanAssignment__c.object-meta.xml
<CustomObject>
    <description>Assigned Products related to Access Codes.</description>
    <label>Plan Assignment</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>