force-app/main/default/objects/PlanAssignment__c/fields/accessCode__c.field-meta.xml
<CustomField>
    <fullName>accessCode__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <label>Access Code</label>
    <referenceTo>Subscription__c</referenceTo>
    <relationshipLabel>Plan Assignments</relationshipLabel>
    <relationshipName>PlanAssignments</relationshipName>
    <type>Lookup</type>
</CustomField>