force-app/main/default/objects/PlanAssignment__c/fields/FoxDen_User__c.field-meta.xml
<CustomField>
    <fullName>FoxDen_User__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>FoxDen_User</description>
    <label>FoxDen User</label>
    <referenceTo>FoxDen_User__c</referenceTo>
    <relationshipLabel>Plan Assignments</relationshipLabel>
    <relationshipName>Plan_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>