force-app/main/default/objects/PlanAssignment__c/fields/Related_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Plan_Name__c</fullName>
    <formula>plan__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Plan Name</label>
    <type>Text</type>
</CustomField>