force-app/main/default/objects/PlanAssignment__c/fields/S3User__c.field-meta.xml
<CustomField>
    <fullName>S3User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Replay User</label>
    <referenceTo>S3User__c</referenceTo>
    <relationshipLabel>Plan Assignments</relationshipLabel>
    <relationshipName>Plan_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>