force-app/main/default/objects/PlanAssignment__c/fields/sObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>sObjectApiName__c</fullName>
    <label>sObjectApiName</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>