force-app/main/default/objects/PlanAssignment__c/fields/sObjectId__c.field-meta.xml
<CustomField>
    <fullName>sObjectId__c</fullName>
    <description>CAUTION - USED IN INTEGRATIONS</description>
    <externalId>true</externalId>
    <label>sObjectId</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>