force-app/main/default/objects/PlanAssignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>plan__c</columns>
    <columns>accessCode__c</columns>
    <columns>NAME</columns>
    <columns>startDate__c</columns>
    <columns>endDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>